--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NISRA</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body class="bg-gray-50">
+
+  <header>
+    <nav>
+      <section class="bg-white shadow-md">
+        <div class="container mx-auto px-6 py-4">
+          <div class="flex items-center justify-between">
+            <div>
+              <a href="#_" class="text-xl font-bold text-gray-900">
+                AI<span class="text-indigo-600">.</span>
+              </a>
+            </div>
+
+            <div class="md:flex justify-between w-5/6">
+              <div class="hidden md:flex space-x-8">
+                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Home</a>
+                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Features</a>
+                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Pricing</a>
+                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Blog</a>
+              </div>
+
+              <div class="hidden md:flex items-center space-x-4">
+                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+              </div>
+            </div>
+
+            <div class="hidden md:flex items-center space-x-4">
+              <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Sign in</a>
+            </div>
+
+            <div class="md:hidden flex items-center">
+              <button id="mobile-menu-toggle" class="text-gray-600 hover:text-indigo-600 focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                  class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                  </path>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden">
+          <div class="space-y-4 py-4 px-6">
+            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Home</a>
+            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Features</a>
+            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Pricing</a>
+            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Blog</a>
+            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Vakansiyalar</a>
+            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Sign in</a>
+          </div>
+        </div>
+      </section>
+    </nav>
+  </header>
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
