--- a/index.html
+++ b/index.html
@@ -12,30 +12,38 @@
 
   <header>
     <nav>
-      <section class="bg-white shadow-md">
+      <section class="bg-white shadow-md h-auto">
         <div class="container mx-auto px-6 py-4">
           <div class="flex items-center justify-between">
             <div>
               <a href="#_" class="text-xl font-bold text-gray-900">
-                AI<span class="text-indigo-600">.</span>
+                <img class="w-[100px] h-[100px]" src="./src/assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
-
             <div class="md:flex justify-between w-5/6">
               <div class="hidden md:flex space-x-8">
-                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Home</a>
-                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Features</a>
-                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Pricing</a>
-                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Blog</a>
+                <a href="./src/pages/viewVacations.html"
+                  class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+                <a href="./src/pages/companies.html"
+                  class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
+                <a href="./src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
+                <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
 
               <div class="hidden md:flex items-center space-x-4">
-                <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+                <a href="./src/pages/addJob.html"
+                  class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
+                  yarat</a>
               </div>
             </div>
 
             <div class="hidden md:flex items-center space-x-4">
-              <a href="#_" class="text-gray-600 hover:text-indigo-600 font-medium">Sign in</a>
+              <a href="./src/pages/register.html"
+                class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/005/544/708/small_2x/profile-icon-design-free-vector.jpg"
+                  alt="Profile" class="w-12 h-12 rounded-full border border-gray-300">
+              </a>
             </div>
 
             <div class="md:hidden flex items-center">
@@ -52,13 +60,21 @@
 
         <div id="mobile-menu" class="md:hidden bg-gray-50 hidden">
           <div class="space-y-4 py-4 px-6">
-            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Home</a>
-            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Features</a>
-            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Pricing</a>
-            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Blog</a>
-            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Vakansiyalar</a>
-            <a href="#_" class="text-gray-600 hover:text-indigo-600 block">Sign in</a>
+            <a href="./src/pages/viewVacations.html"
+              class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+            <a href="./src/pages/companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
+            <a href="./src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
+            <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
           </div>
+
+          <div class="hidden md:flex items-center space-x-4">
+            <a href="#_"
+              class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
+              yarat</a>
+          </div>
+        </div>
+
+        </div>
         </div>
       </section>
     </nav>
