--- a/index.html
+++ b/index.html
@@ -11,39 +11,108 @@
 </head>
 
 <body>
+  <header class="bg-gray-50">
+    <nav>
+      <section class="bg-white shadow-md h-auto">
+        <div class="container mx-auto px-6 py-4">
+          <div class="flex items-center justify-between">
+            <div>
+              <a href="#_" class="text-xl font-bold text-gray-900">
+                <img class="w-[100px] h-[100px]" src="./src/assets/media/istockphoto-858209386-612x612.jpg" alt="">
+              </a>
+            </div>
+            <div class="md:flex justify-between w-5/6">
+              <div class="hidden md:flex space-x-8">
+                <a href="./src/pages/viewVacations.html"
+                  class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+                <a href="./src/pages/companies.html"
+                  class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
+                <a href="./src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
+                <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
+              </div>
 
+              <div class="hidden md:flex items-center space-x-4">
+                <a href="./src/pages/addJob.html"
+                  class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
+                  yarat</a>
+              </div>
+            </div>
+
+            <div class="hidden md:flex items-center space-x-4">
+              <a href="./src/pages/register.html"
+                class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/005/544/708/small_2x/profile-icon-design-free-vector.jpg"
+                  alt="Profile" class="w-12 h-12 rounded-full border border-gray-300">
+              </a>
+            </div>
+
+            <div class="md:hidden flex items-center">
+              <button id="mobile-menu-toggle" class="text-gray-600 hover:text-indigo-600 focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                  class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                  </path>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden">
+          <div class="space-y-4 py-4 px-6">
+            <a href="./src/pages/viewVacations.html"
+              class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+            <a href="./src/pages/companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
+            <a href="./src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
+            <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
+          </div>
+
+          <div class="hidden md:flex items-center space-x-4">
+            <a href="#_"
+              class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
+              yarat</a>
+          </div>
+        </div>
+
+        </div>
+        </div>
+      </section>
+    </nav>
+  </header>
 
 
 
   <footer>
 
     <div class="bg-gray-600" style="background-color: #303030;">
-      <div class="max-w-screen-lg px-4 sm:px-6 text-white-500 sm:grid md:grid-cols-4 sm:grid-cols-2 mx-auto" style="color: white;">
+      <div class="max-w-screen-lg px-4 sm:px-6 text-white-500 sm:grid md:grid-cols-4 sm:grid-cols-2 mx-auto"
+        style="color: white;">
         <div class="p-5">
           <div class="text-sm uppercase font-bold">Namizədlər üçün</div>
           <a class="my-3 block" href="/#">İş elanları <span class="text-teal-600 text-xs p-1"></span></a><a
             class="my-3 block" href="/#">Ətraflı axtarış <span class="text-teal-600 text-xs p-1"></span></a><a
             class="my-3 block" href="/#">Şirkətlərin siyahısı <span class="text-teal-600 text-xs p-1"></span></a>
-            <a class="my-3 block" href="/#">İş kateqoriyaları <span class="text-teal-600 text-xs p-1"></span></a><a
+          <a class="my-3 block" href="/#">İş kateqoriyaları <span class="text-teal-600 text-xs p-1"></span></a><a
             class="my-3 block" href="/#">İxtisaslar <span class="text-teal-600 text-xs p-1"></span></a><a
             class="my-3 block" href="/#">Rayonlar üzrə vakansiyalar <span class="text-teal-600 text-xs p-1"></span></a>
-            <a class="my-3 block" href="/#">İxtisaslar kateqoriya üzrə <span class="text-teal-600 text-xs p-1"></span></a>
+          <a class="my-3 block" href="/#">İxtisaslar kateqoriya üzrə <span class="text-teal-600 text-xs p-1"></span></a>
         </div>
         <div class="p-5">
           <div class="text-sm uppercase font-bold">İşə götürənlər üçün</div>
           <a class="my-3 block" href="/#">İşçini necə tapmalı? <span class="text-teal-600 text-xs p-1"></span></a><a
             class="my-3 block" href="/#">Qiymətlər <span class="text-teal-600 text-xs p-1"></span></a><a
             class="my-3 block" href="/#">Headhunting <span class="text-teal-600 text-xs p-1"></span></a>
-            <a class="my-3 block" href="/#">İşaxtaranlar <span class="text-teal-600 text-xs p-1"></span></a>
+          <a class="my-3 block" href="/#">İşaxtaranlar <span class="text-teal-600 text-xs p-1"></span></a>
         </div>
         <div class="p-5">
           <div class="text-sm uppercase font-bold">Faydalı</div>
-          <a class="my-3 block" href="/#">Blog <span class="text-teal-600 text-xs p-1"></span></a><a
-            class="my-3 block" href="/#">Haqqımızda <span class="text-teal-600 text-xs p-1"></span></a><a
-            class="my-3 block" href="/#">Şərtlər və qaydalar <span class="text-teal-600 text-xs p-1"></span></a>
-            <a class="my-3 block" href="/#">Məxfilik siyasəti <span class="text-teal-600 text-xs p-1"></span></a>
-            <a class="my-3 block" href="/#">Əlaqə <span class="text-teal-600 text-xs p-1"></span></a>
-            <a class="my-3 block" href="/#">Ödəmə və maliyyə <span class="text-teal-600 text-xs p-1"></span></a>
+          <a class="my-3 block" href="/#">Blog <span class="text-teal-600 text-xs p-1"></span></a><a class="my-3 block"
+            href="/#">Haqqımızda <span class="text-teal-600 text-xs p-1"></span></a><a class="my-3 block"
+            href="/#">Şərtlər və qaydalar <span class="text-teal-600 text-xs p-1"></span></a>
+          <a class="my-3 block" href="/#">Məxfilik siyasəti <span class="text-teal-600 text-xs p-1"></span></a>
+          <a class="my-3 block" href="/#">Əlaqə <span class="text-teal-600 text-xs p-1"></span></a>
+          <a class="my-3 block" href="/#">Ödəmə və maliyyə <span class="text-teal-600 text-xs p-1"></span></a>
         </div>
         <div class="p-5">
           <div class="text-sm uppercase font-bold">Hesab</div>
@@ -155,81 +224,9 @@
     </div>
 
   </footer>
-  <title>NISRA</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
 
-<body class="bg-gray-50">
 
-  <header>
-    <nav>
-      <section class="bg-white shadow-md h-auto">
-        <div class="container mx-auto px-6 py-4">
-          <div class="flex items-center justify-between">
-            <div>
-              <a href="#_" class="text-xl font-bold text-gray-900">
-                <img class="w-[100px] h-[100px]" src="./src/assets/media/istockphoto-858209386-612x612.jpg" alt="">
-              </a>
-            </div>
-            <div class="md:flex justify-between w-5/6">
-              <div class="hidden md:flex space-x-8">
-                <a href="./src/pages/viewVacations.html"
-                  class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-                <a href="./src/pages/companies.html"
-                  class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
-                <a href="./src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
-                <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
-              </div>
 
-              <div class="hidden md:flex items-center space-x-4">
-                <a href="./src/pages/addJob.html"
-                  class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
-                  yarat</a>
-              </div>
-            </div>
-
-            <div class="hidden md:flex items-center space-x-4">
-              <a href="./src/pages/register.html"
-                class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
-                <img
-                  src="https://static.vecteezy.com/system/resources/thumbnails/005/544/708/small_2x/profile-icon-design-free-vector.jpg"
-                  alt="Profile" class="w-12 h-12 rounded-full border border-gray-300">
-              </a>
-            </div>
-
-            <div class="md:hidden flex items-center">
-              <button id="mobile-menu-toggle" class="text-gray-600 hover:text-indigo-600 focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                  class="w-6 h-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
-                  </path>
-                </svg>
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden">
-          <div class="space-y-4 py-4 px-6">
-            <a href="./src/pages/viewVacations.html"
-              class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-            <a href="./src/pages/companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
-            <a href="./src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
-            <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
-          </div>
-
-          <div class="hidden md:flex items-center space-x-4">
-            <a href="#_"
-              class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
-              yarat</a>
-          </div>
-        </div>
-
-        </div>
-        </div>
-      </section>
-    </nav>
-  </header>
 
   <script type="module" src="/main.js"></script>
 </body>
