--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -3,57 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV Cards</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <section class="mb-2 border p-4 rounded-lg max-w-full">
-        <div class=" bg-neutral-100">
-            <div class="card md:flex-c max-w-lg">
-                <div class="h-20 mx-auto mb-6 flex-shrink-0 md:flex justify-center">
-                    <img class="object-cover rounded-full" src="https://tailwindflex.com/public/images/user.png">
+<body class="bg-gray-100 p-6">
+    <section class="max-w-4xl mx-auto grid gap-6 md:grid-cols-2 lg:grid-cols-3">
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden border border-gray-200">
+            <div class="p-4 text-center">
+                <div class="w-24 h-24 mx-auto mb-4">
+                    <img class="object-cover rounded-full border-2 border-blue-500" src="https://tailwindflex.com/public/images/user.png" alt="User Avatar">
                 </div>
-                <div class="text-center md:text-center">
-                    <h3 class="text-xl heading">John Doe</h3>
-                    <p class="font-bold">Senior Developer</p>
-                </div>
-                <div>
-                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded md:flex justify-center mx-auto mt-5">
-                       Profile bax
-                    </button>
-                </div>
+                <h3 class="text-xl font-bold text-gray-800">John Doe</h3>
+                <p class="text-gray-600">Senior Developer</p>
             </div>
-        </div>
-        <div class=" bg-neutral-100">
-            <div class="card md:flex-c max-w-lg">
-                <div class="h-20 mx-auto mb-6 flex-shrink-0 md:flex justify-center">
-                    <img class="object-cover rounded-full" src="https://tailwindflex.com/public/images/user.png">
-                </div>
-                <div class="text-center md:text-center">
-                    <h3 class="text-xl heading">John Doe</h3>
-                    <p class="font-bold">Senior Developer</p>
-                </div>
-                <div>
-                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded md:flex justify-center mx-auto mt-5">
-                       Profile bax
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class=" bg-neutral-100">
-            <div class="card md:flex-c max-w-lg">
-                <div class="h-20 mx-auto mb-6 flex-shrink-0 md:flex justify-center">
-                    <img class="object-cover rounded-full" src="https://tailwindflex.com/public/images/user.png">
-                </div>
-                <div class="text-center md:text-center">
-                    <h3 class="text-xl heading">John Doe</h3>
-                    <p class="font-bold">Senior Developer</p>
-                </div>
-                <div>
-                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded md:flex justify-center mx-auto mt-5">
-                       Profile bax
-                    </button>
-                </div>
+            <div class="px-4 py-2 border-t border-gray-200 bg-gray-50 flex justify-center">
+                <a href="userDetails.html" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-full">
+                    Profile bax
+                </a>
             </div>
         </div>
     </section>
