--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Vite App</title>
+  <title>NISRA</title>
+  <link rel="shortcut icon" href="./src/assets/media/istockphoto-858209386-612x612.jpg" type="image/x-icon">
 
 </head>
 
@@ -17,12 +18,12 @@
         <div class="container mx-auto px-6 py-4">
           <div class="flex items-center justify-between">
             <div>
-              <a href="#_" class="text-xl font-bold text-gray-900">
+              <a href="./index.html" class="text-xl font-bold text-gray-900">
                 <img class="w-[100px] h-[100px]" src="./src/assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
             <div class="md:flex justify-between w-5/6">
-              <div class="hidden md:flex space-x-8">
+              <div class="md:flex space-x-8">
                 <a href="./src/pages/viewVacations.html"
                   class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
                 <a href="./src/pages/companies.html"
@@ -31,14 +32,14 @@
                 <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
 
-              <div class="hidden md:flex items-center space-x-4">
+              <div class="md:flex items-center space-x-4">
                 <a href="./src/pages/addJob.html"
                   class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
                   yarat</a>
               </div>
             </div>
 
-            <div class="hidden md:flex items-center space-x-4">
+            <div class="md:flex items-center space-x-4">
               <a href="./src/pages/register.html"
                 class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
                 <img
@@ -224,7 +225,6 @@
     </div>
 
   </footer>
-
 
 
 
