--- a/src/pages/detailsVacancies.html
+++ b/src/pages/detailsVacancies.html
@@ -90,67 +90,35 @@
     </header>
 
     <main>
-        <div class="flex flex-col items-center bg-gray-50 min-h-screen p-6">
-            <h1 class="text-2xl font-bold text-gray-800 mb-8">Vakansiyalar | İş elanları</h1>
-
-            <div class="flex w-full max-w-7xl gap-8">
-
-                <div class="flex-1 bg-white shadow-md rounded-lg p-6">
-                    <div class="space-y-4">
-                        <div class="vacanciesContainer">
-
-                        </div>
-                    </div>
+        <div class="bg-gray-100 flex justify-start p-10">
+            <button id="go-backBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">GO BACK</button>
+        </div>
+        <div class="min-h-fit py-5 bg-gray-100 flex items-center justify-center">
+            <div class="container mx-auto bg-white shadow-md rounded-lg p-6">
+                <div class="mb-6">
+                    <h1 id="vacancyTitle" class="text-3xl font-bold text-gray-800">Vacancy Title</h1>
+                    <p id="vacancyPostedAt" class="text-sm text-gray-500 mt-2">Posted on: YYYY-MM-DD</p>
                 </div>
 
+                <div class="mb-6">
+                    <h2 class="text-xl font-semibold text-gray-700">Description</h2>
+                    <p id="vacancyDescription" class="text-gray-600 mt-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique.
+                    </p>
+                </div>
 
-                <div class="w-1/3 bg-white shadow-md rounded-lg p-6 space-y-4">
-                    <h2 class="text-lg font-bold text-gray-800">Filterlər</h2>
+                <div id="vacancyDetails" class="space-y-4">
+                    <p><strong>Description:</strong> Detailed job description goes here.</p>
+                    <p><strong>Salary:</strong> Not specified</p>
+                    <p><strong>Employment Type:</strong> Full-time</p>
+                    <p><strong>Status:</strong> Active</p>
+                </div>
 
-
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Kateqoriyalar</label>
-                        <input type="text"
-                            class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-                            placeholder="Kateqoriyalar" />
-                    </div>
-
-
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">İxtisaslar</label>
-                        <input type="text"
-                            class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-                            placeholder="Vəzifələr" />
-                    </div>
-
-
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Məşğulluq növü</label>
-                        <select
-                            class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
-                            <option selected>seçilməyib</option>
-                        </select>
-                    </div>
-
-
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Minimum maaş</label>
-                        <input type="number"
-                            class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-                            placeholder="minimum" />
-                    </div>
-
-
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Maksimum maaş</label>
-                        <input type="number"
-                            class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-                            placeholder="maximum" />
-                    </div>
-
-
-                    <button class="w-full bg-blue-500 text-white py-2 rounded-md shadow hover:bg-blue-600">
-                        Göndər
+                <div id="vacancyStatus" class="mt-6">
+                    <button
+                        class="bg-green-500 text-white px-4 py-2 rounded-full text-sm font-semibold shadow-md hover:opacity-90 transition duration-300">
+                        Active
                     </button>
                 </div>
             </div>
@@ -311,7 +279,7 @@
 
     </footer>
 
-    <script type="module" src="../services/vacancyService.js"></script>
+    <script type="module" src="../services/detailsVacancies.js"></script>
 </body>
 
 </html>
