--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -3,25 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Cards</title>
+    <title>Dynamic CV Cards with Axios</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script defer type="module" src="../components/addUsers.js"></script>
 </head>
 <body class="bg-gray-100 p-6">
-    <section class="max-w-4xl mx-auto grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden border border-gray-200">
-            <div class="p-4 text-center">
-                <div class="w-24 h-24 mx-auto mb-4">
-                    <img class="object-cover rounded-full border-2 border-blue-500" src="https://tailwindflex.com/public/images/user.png" alt="User Avatar">
-                </div>
-                <h3 class="text-xl font-bold text-gray-800">John Doe</h3>
-                <p class="text-gray-600">Senior Developer</p>
-            </div>
-            <div class="px-4 py-2 border-t border-gray-200 bg-gray-50 flex justify-center">
-                <a href="userDetails.html" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-full">
-                    Profile bax
-                </a>
-            </div>
-        </div>
+    <section class="max-w-4xl mx-auto">
+        <h1 class="text-2xl font-bold text-gray-800 mb-6">User Cards</h1>
+        <div id="userCards" class="grid gap-6 md:grid-cols-2 lg:grid-cols-3"></div>
     </section>
+
 </body>
 </html>
+
