--- a/src/pages/viewVacations.html
+++ b/src/pages/viewVacations.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <header class="bg-gray-50">
+    <header class="bg-gray-50 fixed w-full h-auto">
         <nav>
             <section class="bg-white shadow-md h-auto">
-                <div class="container mx-auto px-6 py-4">
+                <div class="container mx-auto px-6 py-1">
                     <div class="flex items-center justify-between">
                         <div>
                             <a href="#_" class="text-xl font-bold text-gray-900">
@@ -90,7 +90,7 @@
     </header>
 
     <main>
-        <div class="flex flex-col items-center bg-gray-50 min-h-screen p-6">
+        <div class="flex flex-col items-center bg-gray-50 min-h-screen py-36">
             <h1 class="text-2xl font-bold text-gray-800 mb-8">Vakansiyalar | İş elanları</h1>
 
             <div class="flex w-full max-w-7xl gap-8">
