--- a/src/pages/addJob.html
+++ b/src/pages/addJob.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Document</title>
+  <title>Add Job</title>
+  <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
+
 </head>
 
 <body>
