--- a/src/pages/detailsVacancies.html
+++ b/src/pages/detailsVacancies.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>NISRA</title>
+    <title>NISRA Details</title>
+    <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="shortcut icon" href="../assets/media/istockphoto-858209386-612x612.jpg" type="image/x-icon">
 
