--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic CV Cards with Axios</title>
+    <title>CV</title>
+    <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script defer type="module" src="../components/addUsers.js"></script>
