--- a/src/pages/viewVacations.html
+++ b/src/pages/viewVacations.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>NISRA</title>
+    <title>NISRA Vakansiya</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="shortcut icon" href="../assets/media/istockphoto-858209386-612x612.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
 
 </head>
 
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="hidden md:flex items-center space-x-4">
-                        <a href="#_"
+                        <a href="./addJob.html"
                             class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
                             yarat</a>
                     </div>
