--- a/src/pages/addJob.html
+++ b/src/pages/addJob.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Add Job</title>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
 
 </head>
