--- a/src/pages/userDetails.html
+++ b/src/pages/userDetails.html
@@ -22,23 +22,23 @@
             </div>
             <div class="md:flex justify-between w-5/6">
               <div class="hidden md:flex space-x-8">
-                <a href="src/pages/viewVacations.html"
+                <a href="./viewVacations.html"
                   class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-                <a href="src/pages/companies.html"
+                <a href="./companies.html"
                   class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
-                <a href="src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
-                <a href="src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
+                <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
+                <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
 
               <div class="hidden md:flex items-center space-x-4">
-                <a href="src/pages/addJob.html"
+                <a href="./addJob.html"
                   class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
                   yarat</a>
               </div>
             </div>
 
             <div class="hidden md:flex items-center space-x-4">
-              <a href="./src/pages/register.html"
+              <a href="./register.html"
                 class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
                 <img
                   src="https://static.vecteezy.com/system/resources/thumbnails/005/544/708/small_2x/profile-icon-design-free-vector.jpg"
