--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -225,7 +226,7 @@
         </div>
     
       </footer>
-
+      <script src="../components/addUsers.js"></script>
 </body>
 
 </html>
