--- a/src/pages/userDetails.html
+++ b/src/pages/userDetails.html
@@ -17,7 +17,7 @@
           <div class="flex items-center justify-between">
             <div>
               <a href="#_" class="text-xl font-bold text-gray-900">
-                <img class="w-[100px] h-[100px]" src="../../src/assets/media/istockphoto-858209386-612x612.jpg" alt="">
+                <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
             <div class="md:flex justify-between w-5/6">
