--- a/src/pages/viewVacations.html
+++ b/src/pages/viewVacations.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <title>NISRA Vakansiya</title>
+  <link rel="stylesheet" href="../../style.css">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link rel="shortcut icon" href="../assets/media/file (1).png" type="image/x-icon">
 
@@ -23,7 +24,7 @@
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
-            <div class="md:flex justify-between w-5/6">
+            <div class="md:flex justify-between w-5/6 gizledilmis">
               <div class="md:flex space-x-8">
                 <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
                 <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
@@ -31,14 +32,14 @@
                 <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
 
-              <div class="md:flex items-center space-x-4">
+              <div class="md:flex items-center space-x-4 gizledilmis">
                 <a href="./addJob.html"
                   class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
                   yarat</a>
               </div>
             </div>
 
-            <div class="md:flex items-center space-x-4">
+            <div class="md:flex items-center space-x-4 gizledilmis">
               <a href="./register.html"
                 class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
                 <img
@@ -84,9 +85,9 @@
     <div class="flex flex-col items-center bg-gray-50 min-h-screen py-36">
       <h1 class="text-2xl font-bold text-gray-800 mb-8">Vakansiyalar | İş elanları</h1>
 
-      <div class="flex w-full max-w-7xl gap-8">
+      <div class="flex w-full max-w-7xl gap-8 main-mobile">
 
-        <div class="flex-1 bg-white shadow-md rounded-lg p-6">
+        <div class="flex-1 bg-white shadow-md rounded-lg p-6 main-mobile-2">
           <div class="space-y-4">
             <div class="vacanciesContainer">
 
@@ -95,7 +96,7 @@
         </div>
 
 
-        <div class="w-1/3 bg-white shadow-md rounded-lg p-6 space-y-4">
+        <div class="w-1/3 bg-white shadow-md rounded-lg p-6 space-y-4 filter">
           <h2 class="text-lg font-bold text-gray-800">Filterlər</h2>
 
 
@@ -108,37 +109,24 @@
 
 
           <div>
-            <label class="block text-sm font-medium text-gray-700 mb-1">İxtisaslar</label>
-            <input type="text"
-              class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-              placeholder="Vəzifələr" />
-          </div>
-
-
-          <div>
             <label class="block text-sm font-medium text-gray-700 mb-1">Məşğulluq növü</label>
-            <select class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
-              <option disabled selected>seçilməyib</option>
-              <option selected>Full-time</option>
-              <option selected>Part-time</option>
+            <select id="typeSelect"
+              class="w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+              <option selected>seçilməyib</option>
+              <option value="Full-time">Full-Time</option>
+              <option value="Part-time">Part-Time</option>
             </select>
           </div>
 
 
           <div>
-            <label class="block text-sm font-medium text-gray-700 mb-1">Minimum maaş</label>
+            <label class="block text-sm font-medium text-gray-700 mb-1">Maaş</label>
             <input type="number"
-              class="minInp w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-              placeholder="minimum" />
+              class="salary w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+              placeholder="Maaş" />
           </div>
 
 
-          <div>
-            <label class="block text-sm font-medium text-gray-700 mb-1">Maksimum maaş</label>
-            <input type="number"
-              class="maxInp w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-              placeholder="maximum" />
-          </div>
 
 
           <button id="filterButton" class="w-full bg-blue-500 text-white py-2 rounded-md shadow hover:bg-blue-600">
