--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -31,7 +31,7 @@
                             Email address
                         </label>
                         <div class="mt-1">
-                            <input id="login-email" name="email" type="email" autocomplete="email" required
+                            <input id="login-email" name="email" type="email" autocomplete="email" 
                                 class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
                                 placeholder="Enter your email address">
                         </div>
@@ -43,7 +43,7 @@
                         </label>
                         <div class="mt-1">
                             <input id="login-password" name="password" type="password" autocomplete="current-password"
-                                required
+                              
                                 class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
                                 placeholder="Enter your password">
                         </div>
@@ -66,7 +66,7 @@
                     </div>
 
                     <div>
-                        <button id="login-sign-in" type="submit"
+                        <button id="login-sign-in" type="button"
                             class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
 
                             Sign in
