--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -113,7 +113,7 @@
 
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../components/login.js"></script>
+    <script type="module" src="../components/login.js"></script>
 </body>
 
 </html>
