--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -24,10 +24,8 @@
             </div>
             <div class="md:flex justify-between w-5/6">
               <div class="md:flex space-x-8">
-                <a href="./viewVacations.html"
-                  class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-                <a href="./companies.html"
-                  class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
+                <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+                <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
                 <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
                 <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
@@ -726,13 +724,13 @@
         stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
       </svg>
-      Chat with Admin Bot
+      Admin ilə Əlaqə
     </button>
   </div>
   <div id="chat-container" class="hidden fixed bottom-16 right-4 w-96">
     <div class="bg-white shadow-md rounded-lg max-w-lg w-full">
       <div class="p-4 border-b bg-blue-500 text-white rounded-t-lg flex justify-between items-center">
-        <p class="text-lg font-semibold">Admin Bot</p>
+        <p class="text-lg font-semibold">Admin(Nurlan)</p>
         <button id="close-chat" class="text-gray-300 hover:text-gray-400 focus:outline-none focus:text-gray-400">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -741,24 +739,24 @@
       </div>
       <div id="chatbox" class="p-4 h-80 overflow-y-auto">
         <div class="mb-2 text-right">
-          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">hello</p>
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Salam</p>
         </div>
         <div class="mb-2">
-          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the chatbot.
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır
           </p>
         </div>
         <div class="mb-2 text-right">
-          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">this example of chat</p>
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Sualım var</p>
         </div>
         <div class="mb-2">
-          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the chatbot.
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır.
           </p>
         </div>
         <div class="mb-2 text-right">
-          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">design with tailwind</p>
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Nurlan cavab ver</p>
         </div>
         <div class="mb-2">
-          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the chatbot.
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır.
           </p>
         </div>
       </div>
@@ -766,7 +764,7 @@
         <input id="user-input" type="text" placeholder="Type a message"
           class="w-full px-3 py-2 border rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         <button id="send-button"
-          class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 transition duration-300">Send</button>
+          class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 transition duration-300">Göndər</button>
       </div>
     </div>
   </div>
@@ -825,13 +823,16 @@
 
     function respondToUser(userMessage) {
       setTimeout(() => {
-        addBotMessage("This is a response from the chatbot.");
+        addBotMessage("Bu Avtomatik Mesajdır.");
       }, 500);
     }
 
     toggleChatbox();
 
   </script>
+
+
+  <script src="../utils/navbar.js"></script>
 </body>
 
 </html>
