--- a/src/pages/companieDetails.html
+++ b/src/pages/companieDetails.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Company Details</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script defer src="../services/companyDetails.js"></script>
+  <script defer type="module" src="../services/companyDetails.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </head>
@@ -215,5 +215,6 @@
 
   </footer>
   
+  <script src="../utils/navbar.js"></script>
 </body>
 </html>
