--- a/src/pages/detailsVacancies.html
+++ b/src/pages/detailsVacancies.html
@@ -31,8 +31,7 @@
                                     class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
                                 <a href="./companies.html"
                                     class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
-                                <a href="./users.html"
-                                    class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
+                                <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
                                 <a href="./about.html"
                                     class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
                             </div>
@@ -70,11 +69,9 @@
                     <div class="space-y-4 py-4 px-6">
                         <a href="./viewVacations.html"
                             class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-                        <a href="./companies.html"
-                            class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
+                        <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
                         <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
-                        <a href="./about.html"
-                            class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
+                        <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
                     </div>
 
                     <div class="hidden md:flex items-center space-x-4">
@@ -282,127 +279,122 @@
     </footer>
 
 
-    <!-- CHATBOX -->
-    <div class="fixed bottom-0 right-0 mb-4 mr-4">
-        <button id="open-chat"
-            class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition duration-300 flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mr-2" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
-                </path>
-            </svg>
-            Chat with Admin Bot
+  <!-- CHATBOX -->
+  <div class="fixed bottom-0 right-0 mb-4 mr-4">
+    <button id="open-chat"
+      class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition duration-300 flex items-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mr-2" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+      </svg>
+      Admin ilə Əlaqə
+    </button>
+  </div>
+  <div id="chat-container" class="hidden fixed bottom-16 right-4 w-96">
+    <div class="bg-white shadow-md rounded-lg max-w-lg w-full">
+      <div class="p-4 border-b bg-blue-500 text-white rounded-t-lg flex justify-between items-center">
+        <p class="text-lg font-semibold">Admin(Nurlan)</p>
+        <button id="close-chat" class="text-gray-300 hover:text-gray-400 focus:outline-none focus:text-gray-400">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
         </button>
-    </div>
-    <div id="chat-container" class="hidden fixed bottom-16 right-4 w-96">
-        <div class="bg-white shadow-md rounded-lg max-w-lg w-full">
-            <div class="p-4 border-b bg-blue-500 text-white rounded-t-lg flex justify-between items-center">
-                <p class="text-lg font-semibold">Admin Bot</p>
-                <button id="close-chat"
-                    class="text-gray-300 hover:text-gray-400 focus:outline-none focus:text-gray-400">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
-                        </path>
-                    </svg>
-                </button>
-            </div>
-            <div id="chatbox" class="p-4 h-80 overflow-y-auto">
-                <div class="mb-2 text-right">
-                    <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">hello</p>
-                </div>
-                <div class="mb-2">
-                    <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the
-                        chatbot.
-                    </p>
-                </div>
-                <div class="mb-2 text-right">
-                    <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">this example of chat</p>
-                </div>
-                <div class="mb-2">
-                    <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the
-                        chatbot.
-                    </p>
-                </div>
-                <div class="mb-2 text-right">
-                    <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">design with tailwind</p>
-                </div>
-                <div class="mb-2">
-                    <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the
-                        chatbot.
-                    </p>
-                </div>
-            </div>
-            <div class="p-4 border-t flex">
-                <input id="user-input" type="text" placeholder="Type a message"
-                    class="w-full px-3 py-2 border rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500">
-                <button id="send-button"
-                    class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 transition duration-300">Send</button>
-            </div>
+      </div>
+      <div id="chatbox" class="p-4 h-80 overflow-y-auto">
+        <div class="mb-2 text-right">
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Salam</p>
         </div>
+        <div class="mb-2">
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır
+          </p>
+        </div>
+        <div class="mb-2 text-right">
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Sualım var</p>
+        </div>
+        <div class="mb-2">
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır.
+          </p>
+        </div>
+        <div class="mb-2 text-right">
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Nurlan cavab ver</p>
+        </div>
+        <div class="mb-2">
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır.
+          </p>
+        </div>
+      </div>
+      <div class="p-4 border-t flex">
+        <input id="user-input" type="text" placeholder="Type a message"
+          class="w-full px-3 py-2 border rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button id="send-button"
+          class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 transition duration-300">Göndər</button>
+      </div>
     </div>
-    <script>
-        const chatbox = document.getElementById("chatbox");
-        const chatContainer = document.getElementById("chat-container");
-        const userInput = document.getElementById("user-input");
-        const sendButton = document.getElementById("send-button");
-        const openChatButton = document.getElementById("open-chat");
-        const closeChatButton = document.getElementById("close-chat");
+  </div>
+  <script>
+    const chatbox = document.getElementById("chatbox");
+    const chatContainer = document.getElementById("chat-container");
+    const userInput = document.getElementById("user-input");
+    const sendButton = document.getElementById("send-button");
+    const openChatButton = document.getElementById("open-chat");
+    const closeChatButton = document.getElementById("close-chat");
 
-        let isChatboxOpen = true;
+    let isChatboxOpen = true;
 
-        function toggleChatbox() {
-            chatContainer.classList.toggle("hidden");
-            isChatboxOpen = !isChatboxOpen;
-        }
+    function toggleChatbox() {
+      chatContainer.classList.toggle("hidden");
+      isChatboxOpen = !isChatboxOpen;
+    }
 
-        openChatButton.addEventListener("click", toggleChatbox);
+    openChatButton.addEventListener("click", toggleChatbox);
 
-        closeChatButton.addEventListener("click", toggleChatbox);
+    closeChatButton.addEventListener("click", toggleChatbox);
 
-        sendButton.addEventListener("click", function () {
-            const userMessage = userInput.value;
-            if (userMessage.trim() !== "") {
-                addUserMessage(userMessage);
-                respondToUser(userMessage);
-                userInput.value = "";
-            }
-        });
+    sendButton.addEventListener("click", function () {
+      const userMessage = userInput.value;
+      if (userMessage.trim() !== "") {
+        addUserMessage(userMessage);
+        respondToUser(userMessage);
+        userInput.value = "";
+      }
+    });
 
-        userInput.addEventListener("keyup", function (event) {
-            if (event.key === "Enter") {
-                const userMessage = userInput.value;
-                addUserMessage(userMessage);
-                respondToUser(userMessage);
-                userInput.value = "";
-            }
-        });
+    userInput.addEventListener("keyup", function (event) {
+      if (event.key === "Enter") {
+        const userMessage = userInput.value;
+        addUserMessage(userMessage);
+        respondToUser(userMessage);
+        userInput.value = "";
+      }
+    });
 
-        function addUserMessage(message) {
-            const messageElement = document.createElement("div");
-            messageElement.classList.add("mb-2", "text-right");
-            messageElement.innerHTML = `<p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">${message}</p>`;
-            chatbox.appendChild(messageElement);
-            chatbox.scrollTop = chatbox.scrollHeight;
-        }
+    function addUserMessage(message) {
+      const messageElement = document.createElement("div");
+      messageElement.classList.add("mb-2", "text-right");
+      messageElement.innerHTML = `<p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">${message}</p>`;
+      chatbox.appendChild(messageElement);
+      chatbox.scrollTop = chatbox.scrollHeight;
+    }
 
-        function addBotMessage(message) {
-            const messageElement = document.createElement("div");
-            messageElement.classList.add("mb-2");
-            messageElement.innerHTML = `<p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">${message}</p>`;
-            chatbox.appendChild(messageElement);
-            chatbox.scrollTop = chatbox.scrollHeight;
-        }
+    function addBotMessage(message) {
+      const messageElement = document.createElement("div");
+      messageElement.classList.add("mb-2");
+      messageElement.innerHTML = `<p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">${message}</p>`;
+      chatbox.appendChild(messageElement);
+      chatbox.scrollTop = chatbox.scrollHeight;
+    }
 
-        function respondToUser(userMessage) {
-            setTimeout(() => {
-                addBotMessage("This is a response from the chatbot.");
-            }, 500);
-        }
+    function respondToUser(userMessage) {
+      setTimeout(() => {
+        addBotMessage("Bu Avtomatik Mesajdır.");
+      }, 500);
+    }
 
-        toggleChatbox();
+    toggleChatbox();
 
-    </script>
+  </script>
+
+    <script src="../utils/navbar.js"></script>
     <script type="module" src="../services/detailsVacancies.js"></script>
 </body>
 
