--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -235,7 +235,7 @@
 
         <script src="https://cdn.tailwindcss.com"></script>
 
-        <script src="../components/register.js"></script>
+        <script type="module" src="../components/register.js"></script>
     </body>
 </body>
 
