--- a/src/pages/viewVacations.html
+++ b/src/pages/viewVacations.html
@@ -20,7 +20,7 @@
         <div class="container mx-auto px-6 py-1">
           <div class="flex items-center justify-between">
             <div>
-              <a href="#" class="text-xl font-bold text-gray-900">
+              <a href="/index.html" class="text-xl font-bold text-gray-900">
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
@@ -32,19 +32,21 @@
                 <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
 
-              <div class="md:flex items-center space-x-4 gizledilmis">
-                <a href="./addJob.html"
+              <div class="md:flex items-center space-x-4 gizledilmis mr-2">
+                <a href="./addJob.html" id="vacancy-panel"
                   class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
                   yarat</a>
               </div>
             </div>
-
             <div class="md:flex items-center space-x-4 gizledilmis">
-              <a href="./register.html"
+              <a href="./register.html" id="logo"
                 class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
-                <img
+                <img id="logo-img"
                   src="https://static.vecteezy.com/system/resources/thumbnails/005/544/708/small_2x/profile-icon-design-free-vector.jpg"
                   alt="Profile" class="w-12 h-12 rounded-full border border-gray-300">
+              </a>
+              <a href="./login.html" id="çıxış"
+                class="hidden text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">Çıxış
               </a>
             </div>
 
@@ -60,19 +62,22 @@
           </div>
         </div>
 
-        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden">
-          <div class="space-y-4 py-4 px-6">
-            <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-            <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
-            <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
-            <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
+        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden w-full flex g-7">
+          <div class="w-full space-y-4 py-4 px-6 flex g-6">
+            <div class="flex w-full">
+              <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+              <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">Şirkətlər</a>
+              <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">CV</a>
+              <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">Haqqımızda</a>
+              <div class="w-full md:flex items-center space-x-4 ml-4">
+                <a href="./addJob.html" id="vacancy-panel"
+                  class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
+                  yarat</a>
+              </div>
+            </div>
           </div>
 
-          <div class="hidden md:flex items-center space-x-4">
-            <a href="./addJob.html"
-              class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
-              yarat</a>
-          </div>
+
         </div>
 
         </div>
@@ -120,18 +125,21 @@
 
 
           <div>
-            <label class="block text-sm font-medium text-gray-700 mb-1">Maaş</label>
+            <label class="block text-sm font-medium text-gray-700 mb-1">Maximum Maaş</label>
             <input type="number"
               class="salary w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-              placeholder="Maaş" />
+              placeholder="Maximum Maaş" id="maxSalary" />
           </div>
-
-
-
-
+          <div>
+            <label class="block text-sm font-medium text-gray-700 mb-1">Minumum Maaş</label>
+            <input type="number"
+              class="salary w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+              placeholder="Minumum Maaş" id="minSalary" />
+          </div>
           <button id="filterButton" class="w-full bg-blue-500 text-white py-2 rounded-md shadow hover:bg-blue-600">
-            Göndər
+            Maaşa görə filter
           </button>
+
         </div>
       </div>
     </div>
@@ -292,13 +300,13 @@
         stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
       </svg>
-      Chat with Admin Bot
+      Admin ilə Əlaqə
     </button>
   </div>
   <div id="chat-container" class="hidden fixed bottom-16 right-4 w-96">
     <div class="bg-white shadow-md rounded-lg max-w-lg w-full">
       <div class="p-4 border-b bg-blue-500 text-white rounded-t-lg flex justify-between items-center">
-        <p class="text-lg font-semibold">Admin Bot</p>
+        <p class="text-lg font-semibold">Admin(Nurlan)</p>
         <button id="close-chat" class="text-gray-300 hover:text-gray-400 focus:outline-none focus:text-gray-400">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -307,24 +315,24 @@
       </div>
       <div id="chatbox" class="p-4 h-80 overflow-y-auto">
         <div class="mb-2 text-right">
-          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">hello</p>
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Salam</p>
         </div>
         <div class="mb-2">
-          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the chatbot.
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır
           </p>
         </div>
         <div class="mb-2 text-right">
-          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">this example of chat</p>
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Sualım var</p>
         </div>
         <div class="mb-2">
-          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the chatbot.
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır.
           </p>
         </div>
         <div class="mb-2 text-right">
-          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">design with tailwind</p>
+          <p class="bg-blue-500 text-white rounded-lg py-2 px-4 inline-block">Nurlan cavab ver</p>
         </div>
         <div class="mb-2">
-          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">This is a response from the chatbot.
+          <p class="bg-gray-200 text-gray-700 rounded-lg py-2 px-4 inline-block">Bu Avtomatik Mesajdır.
           </p>
         </div>
       </div>
@@ -332,7 +340,7 @@
         <input id="user-input" type="text" placeholder="Type a message"
           class="w-full px-3 py-2 border rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         <button id="send-button"
-          class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 transition duration-300">Send</button>
+          class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 transition duration-300">Göndər</button>
       </div>
     </div>
   </div>
@@ -391,13 +399,14 @@
 
     function respondToUser(userMessage) {
       setTimeout(() => {
-        addBotMessage("This is a response from the chatbot.");
+        addBotMessage("Bu Avtomatik Mesajdır.");
       }, 500);
     }
 
     toggleChatbox();
 
   </script>
+  <script src="../utils/navbar.js"></script>
   <script type="module" src="../services/vacancyService.js"></script>
 </body>
 
