navbar dinamik login register

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -28,12 +28,12 @@
                 <form class="space-y-6" action="#" method="POST">
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">
-                            Email address
+                            Users Email or Company Username
                         </label>
                         <div class="mt-1">
                             <input id="login-email" name="email" type="email" autocomplete="email" 
                                 class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                placeholder="Enter your email address">
+                                placeholder="Enter your email address or Username">
                         </div>
                     </div>
 
