--- a/src/pages/addJob.html
+++ b/src/pages/addJob.html
@@ -11,18 +11,17 @@
 </head>
 
 <body>
-
-  <header>
+  <header class="bg-gray-50 fixed w-full h-auto">
     <nav>
       <section class="bg-white shadow-md h-auto">
-        <div class="container mx-auto px-6 py-4">
+        <div class="container mx-auto px-6 py-1">
           <div class="flex items-center justify-between">
             <div>
-              <a href="#_" class="text-xl font-bold text-gray-900">
+              <a href="/index.html" class="text-xl font-bold text-gray-900">
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
-            <div class="md:flex justify-between w-5/6">
+            <div class="md:flex justify-between w-5/6 gizledilmis">
               <div class="md:flex space-x-8">
                 <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
                 <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
@@ -30,19 +29,21 @@
                 <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
 
-              <div class="md:flex items-center space-x-4">
-                <a href="./addJob.html"
+              <div class="md:flex items-center space-x-4 gizledilmis mr-2">
+                <a href="./addJob.html" id="vacancy-panel"
                   class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
                   yarat</a>
               </div>
             </div>
-
-            <div class="md:flex items-center space-x-4">
-              <a href="./register.html"
+            <div class="md:flex items-center space-x-4 gizledilmis">
+              <a href="./register.html" id="logo"
                 class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
-                <img
+                <img id="logo-img"
                   src="https://static.vecteezy.com/system/resources/thumbnails/005/544/708/small_2x/profile-icon-design-free-vector.jpg"
                   alt="Profile" class="w-12 h-12 rounded-full border border-gray-300">
+              </a>
+              <a href="./login.html" id="çıxış"
+                class="hidden text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">Çıxış
               </a>
             </div>
 
@@ -58,20 +59,22 @@
           </div>
         </div>
 
-        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden">
-          <div class="space-y-4 py-4 px-6">
-            <a href="./src/pages/viewVacations.html"
-              class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-            <a href="./src/pages/companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
-            <a href="./src/pages/users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
-            <a href="./src/pages/about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
+        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden w-full flex g-7">
+          <div class="w-full space-y-4 py-4 px-6 flex g-6">
+            <div class="flex w-full">
+              <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+              <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">Şirkətlər</a>
+              <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">CV</a>
+              <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">Haqqımızda</a>
+              <div class="w-full md:flex items-center space-x-4 ml-4">
+                <a href="./addJob.html" id="vacancy-panel"
+                  class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
+                  yarat</a>
+              </div>
+            </div>
           </div>
 
-          <div class="hidden md:flex items-center space-x-4">
-            <a href="#_"
-              class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
-              yarat</a>
-          </div>
+
         </div>
 
         </div>
