--- a/src/pages/companieDetails.html
+++ b/src/pages/companieDetails.html
@@ -1,6 +1,7 @@
 <!-- company-details.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,51 +11,85 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </head>
+
 <body>
 
 
-  <header class="bg-gray-50 z-50 fixed w-full h-auto">
-    <nav class="z-50">
+  <header class="bg-gray-50 fixed w-full h-auto">
+    <nav>
       <section class="bg-white shadow-md h-auto">
-        <div class="container mx-auto px-6 py-4">
+        <div class="container mx-auto px-6 py-1">
           <div class="flex items-center justify-between">
             <div>
-              <a href="#_" class="text-xl font-bold text-gray-900">
+              <a href="/index.html" class="text-xl font-bold text-gray-900">
                 <img class="w-[100px] h-[100px]" src="../assets/media/istockphoto-858209386-612x612.jpg" alt="">
               </a>
             </div>
-            <div class="md:flex justify-between w-5/6">
+            <div class="md:flex justify-between w-5/6 gizledilmis">
               <div class="md:flex space-x-8">
-                <a href="./viewVacations.html"
-                  class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
-                <a href="./companies.html"
-                  class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
+                <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+                <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium">Şirkətlər</a>
                 <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium">CV</a>
                 <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium">Haqqımızda</a>
               </div>
 
-              <div class="md:flex items-center space-x-4">
-                <a href="./addJob.html"
+              <div class="md:flex items-center space-x-4 gizledilmis mr-2">
+                <a href="./addJob.html" id="vacancy-panel"
                   class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
                   yarat</a>
               </div>
             </div>
-
-            <div class="md:flex items-center space-x-4">
-              <a href="./register.html"
+            <div class="md:flex items-center space-x-4 gizledilmis">
+              <a href="./register.html" id="logo"
                 class="flex items-center space-x-2 text-gray-600 hover:text-indigo-600 font-medium">
-                <img
+                <img id="logo-img"
                   src="https://static.vecteezy.com/system/resources/thumbnails/005/544/708/small_2x/profile-icon-design-free-vector.jpg"
                   alt="Profile" class="w-12 h-12 rounded-full border border-gray-300">
               </a>
+              <a href="./login.html" id="çıxış"
+                class="hidden text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">Çıxış
+              </a>
             </div>
+
+            <div class="md:hidden flex items-center">
+              <button id="mobile-menu-toggle" class="text-gray-600 hover:text-indigo-600 focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                  class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                  </path>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div id="mobile-menu" class="md:hidden bg-gray-50 hidden w-full flex g-7">
+          <div class="w-full space-y-4 py-4 px-6 flex g-6">
+            <div class="flex w-full">
+              <a href="./viewVacations.html" class="text-gray-600 hover:text-indigo-600 font-medium">Vakansiyalar</a>
+              <a href="./companies.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">Şirkətlər</a>
+              <a href="./users.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">CV</a>
+              <a href="./about.html" class="text-gray-600 hover:text-indigo-600 font-medium ml-4">Haqqımızda</a>
+              <div class="w-full md:flex items-center space-x-4 ml-4">
+                <a href="./addJob.html" id="vacancy-panel"
+                  class="text-gray-600 font-medium bg-gray-200 shadow-md hover:bg-blue-800 text-black hover:text-zinc-50 font-bold py-2 px-4 rounded">+Vakansiya
+                  yarat</a>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+        </div>
+        </div>
       </section>
     </nav>
   </header>
 
 
 
-  <div  class="bg-gray-100" style="padding-top: 130px;" >
+  <div class="bg-gray-100" style="padding-top: 130px;">
     <div class="max-w-4xl mx-auto p-6">
       <div class="bg-white shadow-md rounded-lg overflow-hidden">
         <img id="company-image" class="w-full h-48 object-cover" alt="Company Image" />
@@ -214,7 +249,8 @@
     </div>
 
   </footer>
-  
+
   <script src="../utils/navbar.js"></script>
 </body>
+
 </html>
