users details card ui

--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -112,13 +112,13 @@
                     <div class="search-section flex flex-col md:flex-row gap-4 items-center md:items-start">
                         <input class="search-data w-full md:w-80 h-12 px-4 border-2 border-500 rounded-lg focus:outline-none focus:ring-2 focus:ring-500" type="search" placeholder="Search by name...">
                         <div class="flex gap-2 mt-3 md:mt-0">
-                            <button type="button" class="search-btn bg-sky-500 text-white rounded-lg px-4 hover:bg-600 transition">Search</button>
-                            <button type="button" class="show-btn bg-sky-500 text-white rounded-lg px-4 hover:bg-600 transition">Show All</button>
+                            <button type="button" class="search-btn bg-blue-500 text-white rounded-lg px-4 hover:bg-600 transition">Search</button>
+                            <button type="button" class="show-btn bg-blue-500 text-white rounded-lg px-4 hover:bg-600 transition">Show All</button>
                         </div>
                     </div>
                 
                     <div class="sort-filter flex justify-center gap-4 mt-6">
-                        <select id="experience-sort" class="w-full md:w-46 h-12 px-4 border-2 border-500 rounded-lg focus:outline-none focus:ring-2 focus:ring-500 text-sky-500 tracking-wider">
+                        <select id="experience-sort" class="w-full md:w-46 h-12 px-4 border-2 border-500 rounded-lg focus:outline-none focus:ring-2 focus:ring-500 text-gray-500 tracking-wider">
                           <option value="low-to-high">Experience: Low to High</option>
                           <option value="high-to-low">Experience: High to Low</option>
                       </select>
